--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,13 +1,14 @@
-batch_size: 32
+batch_size: 16
 epochs: 40
-lr: 0.001
+lr: 0.0001
+weight_decay: 0.001
 
 device: cuda:0
 num_workers: 2
 seed: 1234
 use_wandb: False
 
-data_dir: data
+data_dir: /content/drive/MyDrive/Colab Notebooks/DLBasics2023_colab/data
 
 # Evaluation
 model_path: 
